Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-114718

[Tests] tst_QQuickPopup fails

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P1: Critical P1: Critical
    • None
    • dev
    • Quick: Controls 2
    • None
    • MacBook Pro, M1
      macOS Ventura 13.4
    • macOS
    • 031da6519 (dev), 9240878b2 (dev), 2adaa51d6 (dev), 1b097bad8 (6.6), f2fb369ee (6.5), 4ce6c3e32 (dev), 7c4cdcda7 (6.6), 3a3a8412d (tqtc/lts-6.5), f27b5464c (dev), 2f807fa22 (6.10), 407ee44ae (6.9), 4fcc49d7a (tqtc/lts-6.8)

      936: FAIL!  : tst_QQuickPopup::Basic::invisibleToolTipOpen() 'toolTip->isOpened()' returned FALSE. ()
      936:    Loc: [/Users/vladimir.belyavsky/qt5/qtdeclarative/tests/auto/quickcontrols/qquickpopup/tst_qquickpopup.cpp(1779)]
      9
      936: FAIL!  : tst_QQuickPopup::Imagine::hover(ApplicationWindow:modeless) '!parentButton->isHovered()' returned FALSE. ()
      936:    Loc: [/Users/vladimir.belyavsky/qt5/qtdeclarative/tests/auto/quickcontrols/qquickpopup/tst_qquickpopup.cpp(993)] 
      936: FAIL!  : tst_QQuickPopup::macOS::cursorShape() Compared values are not the same 936:    Actual   (window->cursor().shape())   : ArrowCursor 936:    Expected (textField->cursor().shape()): IBeamCursor 936:    Loc: [/Users/vladimir.belyavsky/qt5/qtdeclarative/tests/auto/quickcontrols/qquickpopup/tst_qquickpopup.cpp(1312)]
      
      936: FAIL!  : tst_QQuickPopup::Material::invisibleToolTipOpen() 'toolTip->isOpened()' returned FALSE. ()
      936:    Loc: [/Users/vladimir.belyavsky/qt5/qtdeclarative/tests/auto/quickcontrols/qquickpopup/tst_qquickpopup.cpp(1779)]
      
      936: FAIL!  : tst_QQuickPopup::Universal::hover(ApplicationWindow:modeless) '!parentButton->isHovered()' returned FALSE. ()
      936:    Loc: [/Users/vladimir.belyavsky/qt5/qtdeclarative/tests/auto/quickcontrols/qquickpopup/tst_qquickpopup.cpp(993)] 

      Failed on the latest Dev (57eeb608dbda01877f8f0451ba676f4638e1040d)
      launched as 

      ctest -V -R tst_qquickpopup

        1. Screenshot 2023-06-22 at 15.40.40.png
          85 kB
          Mitch Curtis
        2. screenshot-1.png
          99 kB
          Jan Arve
        3. screenshot-2.png
          59 kB
          Mitch Curtis
        4. Screenshot 2023-06-26 at 16.32.36.png
          426 kB
          Mitch Curtis
        For Gerrit Dashboard: QTBUG-114718
        # Subject Branch Project Status CR V

            qt.team.quick.subscriptions Qt Quick and Widgets Team
            studiosus Vladimir Belyavsky
            Votes:
            0 Vote for this issue
            Watchers:
            9 Start watching this issue

              Created:
              Updated:
              Resolved: