Add PointLerper to QQuickVisualTestUtils

This is a convenience class to linearly interpolate between two
move points:

    PointLerper pointLerper(window);
    // Lerps from {0, 0} to {15, 15}.
    pointLerper.move(15, 15);
    QVERIFY(parentButton->isHovered());

    // Lerps from {15, 15} to {25, 25}.
    pointLerper.move(25, 25);
    QVERIFY(childButton->isHovered());

This allows testing mouse interaction in a more realistic manner,
as opposed to immediately moving to a new position with no intermediate
move events.

More importantly, it fixes flakiness in tst_qquickpopup hover tests.

Includes an attempt to stabilize tst_QQuickDrawer::multiple() which
seems to crash due to events arriving after window destruction.

Task-number: QTBUG-114718
Change-Id: I4b466d820cec4113a9d266685c4575a3692e5202
Reviewed-by: Shawn Rutledge <shawn.rutledge@qt.io>
Reviewed-by: Axel Spoerl <axel.spoerl@qt.io>
(cherry picked from commit 2adaa51d6fa7952013c592d2a8a75814112ee247)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>